--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
-    this is me
+    this is also me
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
 
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "4265264819";
+    var serviceWorkerVersion = "3782146675";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
