changed circle avatar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
-    this is also me
+
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
 
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="https://gnats26.github.io/stsArchex/">
+  <base href="https://gnats26.github.io/stsArchex/#/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "3782146675";
+    var serviceWorkerVersion = "2279348147";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
